package com.pigadoor.application;

public class Client {

    public static void main(String[] args) {
        new ClientConnector().run();
    }

}